--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="large_text">"Material is the metaphor.\n\n"</string>
     <string name="hour">小时</string>
     <string name="minute">分钟</string>
+    <string name="title_activity_kotlinm">KotlinmActivity</string>
 </resources>
